[package]
name = "linkmove-rs-nwg"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5" # Optional. Only if the derive macro is used.
regex = "1.10.3"

[build-dependencies]
embed-resource = "2.4.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "synchapi", "handleapi"] }